fix(styles): change align-content: center for place-content: center on the body

--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ body {
 	background-color: var(--very-dark-blue-main-bg);
 	color: var(--white);
 	display: grid;
-	align-content: center;
+	place-content: center;
 }
 
 .attribution {
